fix(modal): fix overflow by adding ellipsis on long title

--- a/src/Kit/Feedback/Modal/styles.module.scss
+++ b/src/Kit/Feedback/Modal/styles.module.scss
@@ -42,6 +42,9 @@
 
             h2 {
                 margin: convertToPixel(--general-spacing-none);
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
             }
         }
 
